--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,11 +2,18 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"label": "build",
-			"command": "webpack serve",
-			"args": [
-				"--mode development"
-			]
+			"type": "npm",
+			"script": "build",
+			"group": "build",
+			"problemMatcher": [],
+			"label": "npm: build",
+			"detail": "webpack --mode production"
+		},
+		{
+			"type": "npm",
+			"script": "start",
+			"label": "npm: start",
+			"detail": "webpack serve --mode development"
 		}
 	]
 }
