--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"webpack-dev-server": "^3.11.2"
 	},
 	"dependencies": {
+		"glm-js": "0.0.6-c",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
 	}
