--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
 	},
 	"dependencies": {
 		"@babel/preset-typescript": "^7.13.0",
-		"glm-js": "0.0.6-c",
+		"gl-matrix": "^3.3.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2"
 	}
