--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@babel/preset-typescript": "^7.13.0",
 		"gl-matrix": "^3.3.0",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"webgl-debug": "^2.0.1"
 	}
 }
