--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
 		"@babel/core": "^7.13.16",
 		"@babel/preset-env": "^7.13.15",
 		"@babel/preset-react": "^7.13.13",
+		"@types/react": "^17.0.11",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.2.4",
 		"style-loader": "^2.0.0",
+		"typescript-plugin-css-modules": "^3.4.0",
 		"webpack": "^5.34.0",
 		"webpack-cli": "^4.6.0",
 		"webpack-dev-server": "^3.11.2"
