--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"homepage": "https://github.com/seckujdivad/WaterSite#readme",
 	"devDependencies": {
 		"@babel/core": "^7.13.16",
+		"@babel/plugin-proposal-class-properties": "^7.14.5",
 		"@babel/preset-env": "^7.13.15",
 		"@babel/preset-react": "^7.13.13",
 		"@types/react": "^17.0.11",
