--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@babel/preset-typescript": "^7.13.0",
 		"gl-matrix": "^3.3.0",
+		"memoize-one": "^5.2.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"webgl-debug": "^2.0.1"
