--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"private": true,
 	"scripts": {
 		"start": "webpack serve --mode development",
-		"build": "webpack --mode production"
+		"build": "webpack --mode production",
+		"typecheck": "tsc --noEmit"
 	},
 	"repository": {
 		"type": "git",
@@ -23,16 +24,17 @@
 		"@babel/plugin-proposal-class-properties": "^7.14.5",
 		"@babel/preset-env": "^7.13.15",
 		"@babel/preset-react": "^7.13.13",
+		"@babel/preset-typescript": "^7.14.5",
 		"@types/react": "^17.0.11",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^5.2.4",
 		"style-loader": "^2.0.0",
+		"typescript": "^4.3.4",
 		"webpack": "^5.34.0",
 		"webpack-cli": "^4.6.0",
 		"webpack-dev-server": "^3.11.2"
 	},
 	"dependencies": {
-		"@babel/preset-typescript": "^7.13.0",
 		"gl-matrix": "^3.3.0",
 		"memoize-one": "^5.2.1",
 		"react": "^17.0.2",
