--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,16 @@
 {
-	"presets": ["@babel/preset-react"],
+	"presets": [
+		[
+			"@babel/preset-react"
+		],
+		[
+			"@babel/preset-env",
+			{
+				"targets": "> 0.25%, not dead",
+				"useBuiltIns": "usage",
+				"corejs": 3
+			}
+		]
+	],
 	"plugins": ["@babel/plugin-proposal-class-properties"]
 }
