--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
 		"@babel/preset-typescript": "^7.14.5",
 		"@types/react": "^17.0.11",
 		"babel-loader": "^8.2.2",
+		"core-js": "^3.15.1",
 		"css-loader": "^5.2.4",
+		"regenerator-runtime": "^0.13.7",
 		"style-loader": "^2.0.0",
+		"ts-loader": "^9.2.3",
 		"typescript": "^4.3.4",
 		"webpack": "^5.34.0",
 		"webpack-cli": "^4.6.0",
