--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
 			"group": "build",
 			"problemMatcher": [],
 			"label": "npm: build",
-			"detail": "webpack --mode production"
+			"detail": "webpack --mode production && node ./production/collect_production.js"
 		},
 		{
 			"type": "npm",
@@ -18,10 +18,10 @@
 		},
 		{
 			"type": "npm",
-			"script": "typecheck",
+			"script": "serve-production",
 			"problemMatcher": [],
-			"label": "npm: typecheck",
-			"detail": "tsc --noEmit"
+			"label": "npm: serve-production",
+			"detail": "http-server ./production/serve"
 		}
 	]
 }
