--- a/babel.config.json
+++ b/babel.config.json
@@ -12,5 +12,6 @@
 			}
 		]
 	],
-	"plugins": ["@babel/plugin-proposal-class-properties"]
+	"plugins": ["@babel/plugin-proposal-class-properties"],
+	"sourceMaps": true
 }
