--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"style-loader": "^2.0.0",
 		"ts-loader": "^9.2.3",
 		"typescript": "^4.3.4",
+		"webgl-strict-types": "^1.0.4",
 		"webpack": "^5.34.0",
 		"webpack-cli": "^4.6.0",
 		"webpack-dev-server": "^3.11.2"
