Added generated TypeScript declarations for CSS modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
 		"sourceMap": true
 	},
 	"include": [
-        "node_modules/webgl-strict-types/index.d.ts",
-		"src/"
+        "node_modules/webgl-strict-types/index.d.ts"
     ]
 }
