--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@babel/preset-env": "^7.13.15",
 		"@babel/preset-react": "^7.13.13",
 		"@babel/preset-typescript": "^7.14.5",
+		"@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
 		"@types/react": "^17.0.11",
 		"babel-loader": "^8.2.2",
 		"core-js": "^3.15.1",
