--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"babel-loader": "^8.2.2",
 		"core-js": "^3.15.2",
 		"css-loader": "^5.2.7",
+		"fork-ts-checker-webpack-plugin": "^6.2.12",
 		"http-server": "^0.12.3",
 		"regenerator-runtime": "^0.13.7",
 		"style-loader": "^2.0.0",
