--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@babel/preset-react": "^7.14.5",
 		"@babel/preset-typescript": "^7.14.5",
 		"@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
+		"@types/offscreencanvas": "^2019.6.4",
 		"@types/react": "^17.0.14",
 		"babel-loader": "^8.2.2",
 		"core-js": "^3.15.2",
